hledger/test/errors/assertions.j
#!/usr/bin/env -S hledger check -f

2022/1/1
  a  0 = 1
